--- a/src/k2/common/CMakeLists.txt
+++ b/src/k2/common/CMakeLists.txt
@@ -2,7 +2,7 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_library(common STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (common PRIVATE Seastar::seastar fmt::fmt)
+target_link_libraries (common PRIVATE Seastar::seastar fmt::fmt skvhttp::common)
 
 # export the library in the common k2Targets
 install(TARGETS common EXPORT k2Targets DESTINATION lib/k2)
